various css tweaks and fixes
Add around 1rem of padding on the body, so the card doesn't touch the edges on small screens.

On the body, change height to min-height - this way, the content will not get cut off if it grows beneath the viewport.

I would move the properties on .wrapper to the body. You don't need to declare nowrap, as that is the default value for flex-wrap.

Remove the width on the card. Instead, give it a max-width of around 20rem to prevent it from getting too wide on larger screens.

On the image, remove the width and height. Add display: block and max-width: 100% - the max-width prevents it from overflowing its container.

--- a/styles.css
+++ b/styles.css
@@ -16,12 +16,11 @@ html {
 }
 body {
     background-color: var(--lightgray);
-    height: 100vh;
+    min-height: 100vh;
     text-align: center;
-}
-.wrapper {
+    padding: 1rem;
     display: flex;
-    flex-flow: column nowrap;
+    flex-flow: column;
     justify-content: center;
     align-items: center;
 }
@@ -32,7 +31,7 @@ main {
     background-color: var(--white);
     color: var(--grayishblue);
     font-family: var(--sans-serif);
-    width: 20rem;
+    max-width: 20rem;
     padding: 1rem;
     border-radius: 20px;
     box-shadow: 0 1.563rem 1.563rem 0 rgba(0, 0, 0, 4.77%);
@@ -50,7 +49,7 @@ p {
 }
 img {
     border-radius: 10px;
-    width: 18rem;
-    height: 18rem;
+    display: block;
+    max-width: 100%;
 }
 
